--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,4 +8,5 @@ html(lang="en")
         link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
     body 
         h1 Hello World!
-        img(src="./img/webpack-logo.png", alt="alt")
+        input(type="text", name="text-field", placeholder="Email").text
+        
