--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,12 +1,11 @@
 doctype html
-html(lang="en")
+html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Webpack project
+        title Hotel Reservation Project
         link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
     body 
         h1 Hello World!
-        input(type="text", name="text-field", placeholder="Email").text
-        
+        include pages/UI-kit.pug
