new-calendar-disign

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,6 +2,6 @@
 @import "./layout/mixins.scss";
 @import "./layout/variables.scss";
 @import "./layout/base.scss";
-// @import "./layout/Montserrat.scss";
+@import "./layout/Montserrat.scss";
 @import "./layout/UI-kit.scss";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./layout/calendar.scss";
