--- a/src/style/layout/Montserrat.scss
+++ b/src/style/layout/Montserrat.scss
@@ -1,43 +1,43 @@
 /// IMPORT FONTS
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-Thin.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-Thin.ttf") format("truetype");
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-ExtraBold.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-ExtraBold.ttf") format("truetype");
     font-weight: 800;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-ExtraLight.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-ExtraLight.ttf") format("truetype");
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("../assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
+    src: url("./assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
 }
