--- a/src/views/pages/UI-kit.pug
+++ b/src/views/pages/UI-kit.pug
@@ -1,4 +1,5 @@
 .ui-kit__container
+    h1(style="color: brown;") UI KIT
     h2 TEXT FIELD
     input(type="text", name="text-field", placeholder="Email").text
     h2 DROPDOWN
@@ -17,10 +18,119 @@
     .date-dropdown
         input(type="text" name="date-field__1" id="el2" placeholder="дд.мм.гггг" autocomplete="off").date-type
         input(type="text" name="date-field__2" id="el3" placeholder="дд.мм.гггг" autocomplete="off").date-type
-    h2 FILTER DATE DROPDOWN 
+    h2 FILTER DATE DROPDOWN
     form
         input(type="text" id="el-filter" name="date" placeholder="дд.мм.гггг" autocomplete="off").filter-date-dropdown
     h2 SUBSCRIPTION TEXT FIELD
     form.subscription
         input(type="email", name="text-field", placeholder="Email").subscription-text-field
-
+    h2 DROPDOWN (WITH ITEM COUNTER)
+    .counter
+        button.counter__btn(type='submit' data-direction="minus") -
+        input.counter__value(type="text" value="0")
+        button.counter__btn(type='submit' data-direction="plus") +
+    h2 CALENDAR
+    .calendar
+        .calendar_month
+            .calendar_month__left
+            .calendar_month__date 
+                h2 МАЙ 2021
+                //- p Пт Ноябрь 5, 2021
+            .calendar_month__right
+        .calendar_weekdays
+            div Пн
+            div Вт
+            div Ср
+            div Чт
+            div Пт
+            div Сб
+            div Вс
+        .calendar_days 
+            .calendar_days__prev-date 
+                p 26
+            .calendar_days__prev-date 
+                p 27
+            .calendar_days__prev-date 
+                p 28
+            .calendar_days__prev-date 
+                p 29
+            .calendar_days__prev-date 
+                p 30
+            div 
+                p 1
+            div 
+                p 2
+            div 
+                p 3
+            div 
+                p 4
+            div 
+                p 5
+            div 
+                p 6
+            div 
+                p 7
+            div 
+                p 8
+            div 
+                p 9
+            div 
+                p 10
+            div 
+                p 11
+            div 
+                p 12
+            div 
+                p 13
+            div 
+                p 14
+            div 
+                p 15
+            div 
+                p 16
+            div 
+                p 17
+            div 
+                p 18
+            div 
+                p 19
+            div 
+                p 20
+            div 
+                p 21
+            div 
+                p 22
+            div 
+                p 23
+            div 
+                p 24
+            div 
+                p 25
+            div 
+                p 26
+            div 
+                p 27
+            div 
+                p 28
+            div.calendar_days__today 
+                p 29
+            div 
+                p 30
+            div 
+                p 31
+            .calendar_days__next-date 
+                p 1
+            .calendar_days__next-date 
+                p 2
+            .calendar_days__next-date 
+                p 3
+            .calendar_days__next-date 
+                p 4
+            .calendar_days__next-date 
+                p 5
+            .calendar_days__next-date 
+                p 6
+        .calendar_buttons 
+            button.calendar_buttons__clear(type='submit') Очистить
+            button.calendar_buttons__submit(type='submit') Применить
+        
