--- a/src/views/pages/UI-kit.pug
+++ b/src/views/pages/UI-kit.pug
@@ -2,6 +2,7 @@
     h1(style="color: brown;") UI KIT
     h2 TEXT FIELD
     input(type="text", name="text-field", placeholder="Email").text
+
     h2 DROPDOWN
     .dropdown
         button(type="submit" name="dropdown-field").dropdown-type Сколько гостей
@@ -12,6 +13,7 @@
                 li(data-value='third').dropdown-menu__list-item Third
                 li(data-value='fourth').dropdown-menu__list-item Fourth
                 li(data-value='five').dropdown-menu__list-item Five
+                
     h2 MASKED TEXT FIELD
     input(type="text" name="date" id="el" placeholder="дд.мм.гггг" autocomplete="off").masked-text-field
     h2 DATE DROPDOWN
@@ -34,8 +36,8 @@
         .calendar_month
             .calendar_month__left
             .calendar_month__date 
-                h2 МАЙ 2021
-                //- p Пт Ноябрь 5, 2021
+                h2
+                span
             .calendar_month__right
         .calendar_weekdays
             div Пн
@@ -46,90 +48,90 @@
             div Сб
             div Вс
         .calendar_days 
-            .calendar_days__prev-date 
-                p 26
-            .calendar_days__prev-date 
-                p 27
-            .calendar_days__prev-date 
-                p 28
-            .calendar_days__prev-date 
-                p 29
-            .calendar_days__prev-date 
-                p 30
-            div 
-                p 1
-            div 
-                p 2
-            div 
-                p 3
-            div 
-                p 4
-            div 
-                p 5
-            div 
-                p 6
-            div 
-                p 7
-            div 
-                p 8
-            div 
-                p 9
-            div 
-                p 10
-            div 
-                p 11
-            div 
-                p 12
-            div 
-                p 13
-            div 
-                p 14
-            div 
-                p 15
-            div 
-                p 16
-            div 
-                p 17
-            div 
-                p 18
-            div 
-                p 19
-            div 
-                p 20
-            div 
-                p 21
-            div 
-                p 22
-            div 
-                p 23
-            div 
-                p 24
-            div 
-                p 25
-            div 
-                p 26
-            div 
-                p 27
-            div 
-                p 28
-            div.calendar_days__today 
-                p 29
-            div 
-                p 30
-            div 
-                p 31
-            .calendar_days__next-date 
-                p 1
-            .calendar_days__next-date 
-                p 2
-            .calendar_days__next-date 
-                p 3
-            .calendar_days__next-date 
-                p 4
-            .calendar_days__next-date 
-                p 5
-            .calendar_days__next-date 
-                p 6
+            //- .calendar_days__prev-date 
+            //-     p 26
+            //- .calendar_days__prev-date 
+            //-     p 27
+            //- .calendar_days__prev-date 
+            //-     p 28
+            //- .calendar_days__prev-date 
+            //-     p 29
+            //- .calendar_days__prev-date 
+            //-     p 30
+            //- div 
+            //-     p 1
+            //- div 
+            //-     p 2
+            //- div 
+            //-     p 3
+            //- div 
+            //-     p 4
+            //- div 
+            //-     p 5
+            //- div 
+            //-     p 6
+            //- div 
+            //-     p 7
+            //- div 
+            //-     p 8
+            //- div 
+            //-     p 9
+            //- div 
+            //-     p 10
+            //- div 
+            //-     p 11
+            //- div 
+            //-     p 12
+            //- div 
+            //-     p 13
+            //- div 
+            //-     p 14
+            //- div 
+            //-     p 15
+            //- div 
+            //-     p 16
+            //- div 
+            //-     p 17
+            //- div 
+            //-     p 18
+            //- div 
+            //-     p 19
+            //- div 
+            //-     p 20
+            //- div 
+            //-     p 21
+            //- div 
+            //-     p 22
+            //- div 
+            //-     p 23
+            //- div 
+            //-     p 24
+            //- div 
+            //-     p 25
+            //- div 
+            //-     p 26
+            //- div 
+            //-     p 27
+            //- div 
+            //-     p 28
+            //- div.calendar_days__today 
+            //-     p 29
+            //- div 
+            //-     p 30
+            //- div 
+            //-     p 31
+            //- .calendar_days__next-date 
+            //-     p 1
+            //- .calendar_days__next-date 
+            //-     p 2
+            //- .calendar_days__next-date 
+            //-     p 3
+            //- .calendar_days__next-date 
+            //-     p 4
+            //- .calendar_days__next-date 
+            //-     p 5
+            //- .calendar_days__next-date 
+            //-     p 6
         .calendar_buttons 
             button.calendar_buttons__clear(type='submit') Очистить
             button.calendar_buttons__submit(type='submit') Применить
