--- a/src/style/layout/mixins.scss
+++ b/src/style/layout/mixins.scss
@@ -9,6 +9,7 @@
     background: #fff;
     box-sizing: border-box;
     text-align: left;
+    z-index: 10;
     &::placeholder {
         color: $Dark-shade-25;
     }
@@ -16,5 +17,68 @@
     &:hover {
         outline: none;
         border: 1px solid $Dark-shade-50;
+    }
+}
+
+@mixin arrow-after {
+    position: relative;
+    &::after {
+        content: "";
+        position: absolute;
+        top: calc(100% - 60%);
+        right: 13px;
+        border: solid $Dark-shade-50;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 3px;
+        transform: rotate(45deg);
+        pointer-events: none;
+        z-index: 10;
+    }
+    &:focus {
+        &::after {
+            transform: rotate(225deg);
+            border-color: $Dark-shade-75;
+        }
+    }
+    &:active {
+        &::after {
+            transform: rotate(225deg);
+        }
+    }
+}
+
+@mixin checkbox {
+    width: 266px;
+    &__label {
+        display: flex;
+        align-items: center;
+        color: $Dark-shade-50;
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 400;
+        position: relative;
+        &:not(:last-of-type) {
+            margin-bottom: 10.56px;
+        }
+        &-input {
+            -webkit-appearance: none;
+            appearance: none;
+            height: 20px;
+            width: 20px;
+            background-color: #fff;
+            border: 1px solid $Dark-shade-25;
+            border-radius: 4px;
+            margin-right: 9.74px;
+            cursor: pointer;
+            &:checked {
+                background: url(./assets/images/check.svg);
+                background-repeat: no-repeat;
+                width: 20px;
+                height: 20px;
+                background-position: center;
+                border-color: $Purple;
+            }
+        }
     }
 }
