--- a/src/style/layout/mixins.scss
+++ b/src/style/layout/mixins.scss
@@ -48,6 +48,8 @@
     }
 }
 
+// ---- CHECKBOX ----
+
 @mixin checkbox {
     width: 266px;
     &__label {
@@ -80,5 +82,89 @@
                 border-color: $Purple;
             }
         }
+    }
+}
+
+// ---- BENEFITS ----
+
+@mixin benefits($image) {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+    padding-bottom: 17px;
+    padding-top: 23px;
+    max-width: 280px;
+    width: 100%;
+    &__svg {
+        background: $image;
+        width: 48px;
+        height: 48px;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-right: 10px;
+    }
+    &__text {
+        display: flex;
+        flex-direction: column;
+        &-name {
+            margin: 0;
+            font-weight: 700;
+            text-transform: none;
+            font-size: 14px;
+            line-height: 24px;
+            color: $Dark-shade-75;
+        }
+        &-description {
+            margin: 0;
+            font-weight: 400;
+            text-transform: unset;
+            font-size: 14px;
+            line-height: 24px;
+            color: $Dark-shade-50;
+        }
+    }
+}
+
+// ---- RADIO BUTTONS ----
+
+@mixin radio {
+    &-container {
+        color: $Dark-shade-50;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+
+        &__label {
+            display: inline-flex;
+            align-items: center;
+            &:not(:first-of-type) {
+                margin-left: 20px;
+            }
+            &_input {
+                appearance: none;
+                -webkit-appearance: none;
+                width: 20px;
+                height: 20px;
+                border: 1px solid $Dark-shade-25;
+                border-radius: 50%;
+                margin-right: 9.74px;
+                cursor: pointer;
+                position: relative;
+                &:checked::before {
+                    content: "";
+                    top: calc(50% - 6px);
+                    left: calc(50% - 6px);
+                    position: absolute;
+                    width: 12px;
+                    height: 12px;
+                    border-radius: 50%;
+                    background: linear-gradient(#bc9cff 0%, #8ba4f9 100%);
+                    border-color: $Purple;
+                }
+            }
+        }
+    }
+    .--checked {
+        color: $Dark-shade-75;
     }
 }
