--- a/src/views/pages/UI-kit.pug
+++ b/src/views/pages/UI-kit.pug
@@ -68,7 +68,7 @@
         .calendar_buttons 
             button.calendar_buttons__clear(type='submit') Очистить
             button.calendar_buttons__submit(type='submit') Применить
-    h2 CHECKBOX
+    h2 CHECKBOX BUTTONS
     form.checkbox
         label.checkbox__label
             input(type='checkbox' checked).checkbox__label-input
@@ -87,4 +87,24 @@
             | Телевизор
         label.checkbox__label
             input(type='checkbox').checkbox__label-input
-            | Шампунь                                                
+            | Шампунь 
+    h2 BENEFITS
+    .benefits-comfort 
+        .benefits-comfort__svg 
+        .benefits-comfort__text
+            h3.benefits-comfort__text-name Комфорт
+            p.benefits-comfort__text-description Шумопоглощающие стены
+    .benefits-location
+        .benefits-location__svg 
+        .benefits-location__text
+            h3.benefits-location__text-name Удобство
+            p.benefits-location__text-description Окно в каждой из спален
+    h2 RADIO BUTTONS 
+    form.radio
+        .radio-container
+            label.radio-container__label
+                input(type="radio" name='sex' value="male").radio-container__label_input
+                | Мужчина
+            label.radio-container__label
+                input(type="radio" name='sex' value="female").radio-container__label_input
+                | Женщина
