--- a/src/style/layout/mixins.scss
+++ b/src/style/layout/mixins.scss
@@ -14,6 +14,7 @@
         color: $Dark-shade-25;
     }
     &:focus,
+    :active,
     &:hover {
         outline: none;
         border: 1px solid $Dark-shade-50;
